Redirect tetris to aws server

--- a/react-tetris/index.html
+++ b/react-tetris/index.html
@@ -2,14 +2,9 @@
 <html>
 
   <head>
-    <link type="text/css" rel="stylesheet" href="tetris.css" />
-    <script data-require="jquery@*" data-semver="2.1.4" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <meta http-equiv="refresh" content="0;URL=http://ec2-54-200-75-151.us-west-2.compute.amazonaws.com:8083/tetris.html" />
   </head>
 
   <body>
-    <div id="container"></div>
-    <script src="https://fb.me/react-0.14.2.js"></script>
-    <script src="http://fb.me/JSXTransformer-0.13.3.js"></script>
-    <script type="text/jsx" src="tetris.jsx"></script>
   </body>
 </html>
